# econ-graph

./: .dockerignore  .env.memory-optimization  .gitignore  .pre-commit-config.yaml  CLOUDFLARE_INTEGRATION_STATUS.md  E2E_TEST_FAILURE_ANALYSIS.md  GITHUB_ISSUE_CRAWLER_LOGS.md  LETSENCRYPT_CLOUDFLARE_INTEGRATION_SUMMARY.md  PERFORMANCE_TODO.md  PR_DESCRIPTION.md  README.md  SEC_EDGAR_XBRL_IMPLEMENTATION_PLAN.md  ci-ports.env  docker-compose.yml  e2e-test-failure-analysis.md  migration-ordering-analysis.md  ports.env  test-playwright-colors.sh
.githooks/: pre-commit-migration-check
admin-frontend/: .eslintrc.memory-optimized.js  Dockerfile  README.md  eslint.config.js  fix-crawlerconfig-tests.js  fix-remaining-issues.js  index.html  jest.config.js  package-lock.json  package.json  package.json.backup  playwright.config.ts  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
backend/: .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  consolidated_schema.sql  deny.toml  extracted_ddl.sql  old_schema.sql  temp_migration.sql
backend/crates/econ-graph-arrow-storage/: Cargo.toml
backend/crates/econ-graph-arrow-storage/src/: lib.rs  types.rs
backend/crates/econ-graph-arrow-storage/src/storage/: iceberg_storage.rs  in_memory_storage.rs  mod.rs  parquet_storage.rs
backend/crates/econ-graph-financial-core/: Cargo.toml
backend/crates/econ-graph-financial-core/src/: lib.rs  main.rs  storage.rs
backend/crates/econ-graph-financial-core/src/catalog/: file_catalog.rs  mod.rs  series_metadata.rs
backend/crates/econ-graph-financial-core/src/crawler/: mod.rs
backend/crates/econ-graph-financial-core/src/database/: mod.rs
backend/crates/econ-graph-financial-core/src/models/: input.rs  mod.rs
backend/crates/econ-graph-financial-core/src/monitoring/: mod.rs
backend/crates/econ-graph-financial-data/: .dockerignore  COMMIT_INFO.md  Cargo.toml  Dockerfile  PRODUCTION.md  README.md  docker-compose.yml  test-docker.sh
backend/crates/econ-graph-financial-data/benches/: performance.rs
backend/crates/econ-graph-financial-data/docs/: API.md  ARCHITECTURE.md  GraphQL-Schema.md  Storage-Architecture.md  Testing-Strategy.md
backend/crates/econ-graph-financial-data/examples/: README.md  basic-usage.rs  graphql-client.rs  performance-testing.rs
backend/crates/econ-graph-financial-data/k8s/: deployment.yaml  pvc.yaml  service.yaml
backend/crates/econ-graph-financial-data/monitoring/: prometheus.yml
backend/crates/econ-graph-financial-data/scripts/: run_benchmarks.sh
backend/crates/econ-graph-financial-data/src/: lib.rs  main.rs
backend/crates/econ-graph-financial-data/src/catalog/: iceberg_catalog.rs  mod.rs
backend/crates/econ-graph-financial-data/src/crawler/: mod.rs
backend/crates/econ-graph-financial-data/src/database/: mod.rs
backend/crates/econ-graph-financial-data/src/graphql/: mod.rs  mutation.rs  query.rs
backend/crates/econ-graph-financial-data/src/models/: input.rs  mod.rs  validation.rs
backend/crates/econ-graph-financial-data/src/monitoring/: mod.rs
backend/crates/econ-graph-financial-data/src/storage/: iceberg_storage.rs  iceberg_storage.rs.backup  in_memory_storage.rs  mod.rs  parquet_storage.rs
backend/crates/econ-graph-financial-data/tests/: arrow_flight_parquet_integration.rs  basic.rs  catalog_integration_test.rs  comprehensive_integration_test.rs  concurrent_access_tests.rs  custom_partitioning_integration_test.rs  docker_integration_test.rs  graphql_parquet_integration.rs  iceberg_advanced_integration.rs  iceberg_financial_specific.rs  iceberg_multi_file_integration.rs  iceberg_test_runner.rs  integration.rs  monitoring.rs  monitoring_integration_test.rs  parquet_integration.rs  simple_parquet_test.rs
backend/crates/econ-graph-financial-graphql/: Cargo.toml
backend/crates/econ-graph-financial-graphql/src/: lib.rs
backend/crates/econ-graph-financial-graphql/src/graphql/: mod.rs  mutation.rs  query.rs
ci/: README.md
config/: ports.env
data/: README.md  cost-analysis.json  usage-events-2025-09-26.csv
demo-tools/: PROFESSIONAL_DEMO_SUMMARY.md  README.md
demo-videos/: .gitignore
frontend/: .eslintcache  .eslintrc.memory-optimized.js  Dockerfile  eslint.config.js  jest.config.js  package-lock.json  package.json  playwright.config.ts  playwright.mobile.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.integration.config.ts  vitest.server.config.ts
grafana-dashboards/: crawler-overview.json  crawler-politeness.json  crawler-status.json  database-statistics.json  econgraph-backend-metrics.json  econgraph-overview.json  logging-dashboard.json  sec-edgar-crawler.json
personas/: ai-developer-standards.md  backend-engineer.md  devops-engineer.md  frontend-developer.md  releng-engineer.md
scripts/: codebase-stats-corrected.sh  configure-postgresql-no-hugepages.sh  create_consolidated_migration.py  debug-backend-startup.sh  disable-hugepages.sh  fix-github-workflow-cache.sh  fix-grafana-dashboards.sh  fix-microk8s-memory.sh  increase-microk8s-resources.sh  increase-pod-limit.sh  memory-optimization-setup.sh  monitor-memory-usage.sh  run-clippy-changed.sh  run-clippy.sh  run-doc-check-changed.sh  run-e2e-with-backend-logs.sh  run-e2e-with-frontend-logs.sh  setup-kind-with-port-mappings.sh  setup-microk8s-complete.sh  setup-microk8s.sh  start-services-with-health-checks.sh  test-cluster-comprehensive.sh  test-e2e-locally.sh  test-e2e-simple.sh  test-e2e.sh  test-grafana-dashboards.sh  test-ingress-routing.sh  test-monitoring.sh  test_arelle.py  (+4 more)
(+715 files in other folders)
