[package]
name = "econ-graph-financial-core"
version = "0.1.0"
edition = "2021"
authors = ["EconGraph Team"]
description = "Core financial data models, catalog, database, and monitoring"
license = "MS-PL"

[dependencies]
# Core dependencies (temporarily disabled)
# econ-graph-core = { path = "../econ-graph-core" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UUID and Time
uuid = { workspace = true }
chrono = { workspace = true }

# Decimal for financial data
rust_decimal = { workspace = true }

# Configuration (temporarily disabled due to version conflicts)
# config = { workspace = true }
# clap = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async traits
async-trait = "0.1"

# Async runtime
tokio = { workspace = true }

# Logging
tracing-subscriber = { workspace = true }

# Testing
[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
